# p2p_chat

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Makefile  PROJECT_STRUCTURE.md  README.md
docs/: INTERNATIONAL_SETUP.md
scripts/: build.sh  build_distro.sh  distro_utils.sh  run_macos.sh
src/: p2p_chat.cpp  relay_server.cpp
